--- a/hw6/style.css
+++ b/hw6/style.css
@@ -407,3 +407,91 @@ span.h2pink {
     }
 
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+    .container {
+        width: 359px;
+    }
+
+    .top_container {
+        width: 375px;
+    }
+
+    .logo {
+        margin-left: 16px;
+    }
+
+    .head_buttons {
+        width: 32px;
+        margin-right: 26px;
+        overflow-x: hidden;
+    }
+
+    .image {
+        display: none;
+    }
+
+    .right_side_head {
+        display: flex;
+        flex-direction: row;
+        margin-left: 56px;
+        margin-top: 148px;
+        margin-bottom: 149px;
+        margin-right: 56px;
+        width: 263px;
+        height: 66px;
+    }
+
+    .rectangle {
+        height: 61px;
+        margin-right: 15px;
+    }
+    
+    .text {
+        padding-top: 6px;
+        font-size: 38px;
+        line-height: 0.7;
+    }
+    
+    span.h2 {
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .top_cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 343px;
+        height: auto;
+        margin: auto;
+        margin-top: 64px;
+
+        gap: 32px;
+    }
+
+    .top_card_big {
+        grid-area: 4 / 1 / 5 / 2;
+        height: 111px;
+    }
+
+    .top_card_big img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .products {
+        margin-top: 64px;
+    }
+
+    .all_cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-top: 64px;
+    }
+    
+    .all_prod_button {
+        margin-top: 41px;
+    }
+
+}
